# AlgorithmsAndDataStructuresCpp

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp  (+1 more)
core/: CMakeLists.txt
core/include/: suffix_array.h
core/include/algorithm/: container.h  find_max_simultaneous_calls.h  longest_common_sub_string.h  numeric.h  repeated_sub_string.h  string.h  string_validation.h
core/include/data_structure/: prefix_sum.h  suffix_array.h
core/include/heap/: working_with_std_heap.h
core/include/linked_list/: working_with_std_list.h
core/include/priority_queue/: working_with_std_priority_queue.h
core/include/stack/: check_brackets.h  check_brackets.hpp
core/include/suffix_array/: construction.h
core/my_dynamic_lib/: CMakeLists.txt
core/my_dynamic_lib/src/: check_brackets.cpp  multiplication.cpp
core/my_static_lib/include/my_static_lib/: addition.hpp
core/my_static_lib/src/: addition.cpp
core/src/: check_brackets.cpp  suffix_array.cpp
core/src/algorithm/: container.cpp  find_max_simultaneous_calls.cpp  longest_common_sub_string.cpp  numeric.cpp  repeated_sub_string.cpp  string.cpp  string_validation.cpp
core/src/data_structure/: prefix_sum.cpp  suffix_array.cpp
core/src/heap/: working_with_std_heap.cpp
core/src/linked_list/: working_with_std_list.cpp
core/src/priority_queue/: working_with_std_priority_queue.cpp
core/src/stack/: check_brackets.cpp
core/src/suffix_array/: construction.cpp
core/stack/: CMakeLists.txt
core/stack/include/stack/: check_brackets.hpp  multiplication.hpp
core/stack/src/: check_brackets.cpp  multiplication.cpp
(+22 files in other folders)
